[metadata]
name = flask_helper
version = 1.0
author = Nour Nasser
author_email = nours02345@gmail.com
url = https://github.com/Nourz1234/flask-helper
description = Helps with various aspects of flask development.
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
requires_python = >=3.10
install_requires =
    flask >=2.3
